# tf2classic-source-engine

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  creatededicatedprojects  creatededicatedprojects.bat  creategameprojects  creategameprojects.bat  wscript
appframework/: appframework.cmake
bitmap/: bitmap.cmake
choreoobjects/: choreoobjects.cmake
cmake/: base.cmake  groups.cmake  msvc_base.cmake  platform_dirs.cmake  posix_base.cmake  postbuild.cmake  video_base.cmake  windows_base.cmake
cmake/misc/: install_lib.cmake  source_cryptlib_include.cmake  source_use_sdl2.cmake  source_use_steamapi.cmake  vpc_groups.cmake
cmake/vs_scripts/: DisableTelemetryVS2022.ps1  VS16NoTelem.bat
common/: engine_launcher_api.h  git_info.cpp.in  git_info.h.in  imageutils.cpp  netmessages.cpp  netmessages.h  proto_oob.h  proto_version.h
common/GameUI/: IGameUI.h
datacache/: datacache.cmake
datamodel/: datamodel.cmake
dedicated/: dedicated.cmake  sys_common.cpp  sys_ded.cpp
dedicated_main/: dedicated_main.cmake
dmxloader/: dmxloader.cmake
dx9sdk/include/: ks.h
engine/: ModelInfo.cpp  baseclient.cpp  baseclient.h  baseclientstate.cpp  baseclientstate.h  baseserver.cpp  baseserver.h  bugreporter.cpp  cdll_engine_int.cpp  cl_main.cpp  cl_main.h  cl_pluginhelpers.cpp  client.cpp  common.cpp  console.cpp  demofile.cpp  engine.cmake  engine.vpc  framesnapshot.h  gl_rsurf.cpp  gl_screen.cpp  gl_warp.cpp  host.cpp  host_cmd.cpp  host_saverestore.cpp  host_state.cpp  l_studio.cpp  master.h  masterserver.cpp  matsys_interface.cpp  modelloader.cpp  net.h  net_chan.cpp  net_ws.cpp  net_ws_headers.h  pure_server.cpp  replay_internal.cpp  replay_internal.h  server.h  servermsghandler.cpp  (+15 more)
engine/audio/: snd_dma.cpp  snd_dsp.cpp  snd_mix.cpp  voice.cpp
filesystem/: basefilesystem.cpp  filesystem_stdio.cmake
game/: dos2unix_wrapper.sh  minmax.sh
game/client/: achievement_notification_panel.cpp  c_baseanimating.cpp  c_baseanimating.h  c_baseentity.cpp  c_baseflex.cpp  c_baseplayer.cpp  c_baseviewmodel.cpp  c_pixel_visibility.cpp  c_prop_vehicle.cpp  c_rope.cpp  c_sceneentity.cpp  c_te_legacytempents.cpp  c_vote_controller.cpp  c_world.cpp  cdll_client_int.cpp  cdll_client_int.h  cdll_util.cpp  cdll_util.h  client_base.cmake  client_base.vpc  client_cstrike.cmake  client_tf2classic.cmake  client_tf2classic.vpc  clientleafsystem.cpp  clientmode_shared.cpp  clientmode_shared.h  clientshadowmgr.cpp  fx.cpp  glow_outline_effect.cpp  hud.cpp  hud.h  hud_basechat.cpp  hud_basedeathnotice.cpp  hud_closecaption.cpp  hud_controlpointicons.cpp  hud_crosshair.cpp  hud_voicestatus.cpp  hud_vote.cpp  in_main.cpp  input.h  (+20 more)
game/server/: CommentarySystem.cpp  ai_basenpc.cpp  ai_basenpc.h  ai_network.h  ai_playerally.cpp  ai_speech.cpp  ai_speech.h  ai_task.h  baseanimating.cpp  basecombatcharacter.cpp  baseentity.cpp  baseentity.h  baseflex.cpp  cbase.cpp  client.cpp  doors.cpp  effects.cpp  gameinterface.cpp  gameinterface.h  gib.cpp  globals.h  globalstate.cpp  mapentities.cpp  nav_entities.cpp  nav_file.cpp  nav_generate.cpp  nav_mesh.cmake  nav_mesh.cpp  nav_mesh.h  nav_mesh_factory.cpp  nav_pathfind.h  pathtrack.cpp  physics.cpp  physics_main.cpp  physics_prop_ragdoll.cpp  player.cpp  player.h  point_devshot_camera.cpp  props.cpp  server_base.cmake  (+14 more)
game/shared/: SoundEmitterSystem.cpp  SpriteTrail.h  achievementmgr.cpp  basecombatweapon_shared.cpp  baseentity_shared.cpp  baseplayer_shared.cpp  baseviewmodel_shared.cpp  cam_thirdperson.cpp  cam_thirdperson.h  gamemovement.cpp  gamerules.cpp  gamerules.h  multiplay_gamerules.cpp  particle_property.cpp  props_shared.cpp  ragdoll_shared.cpp  shareddefs.h  teamplay_gamerules.cpp  teamplay_round_timer.cpp  teamplay_round_timer.h  teamplayroundbased_gamerules.cpp  teamplayroundbased_gamerules.h  util_shared.cpp  util_shared.h  weapon_parse.cpp
gameui/: BasePanel.cpp  BasePanel.h  GameUI.cmake  GameUI_Interface.cpp  GameUI_Interface.h  ModInfo.cpp  ModInfo.h  OptionsDialog.cpp  OptionsDialog.h  OptionsDialog_Xbox.cpp  OptionsSubKeyboard.cpp  OptionsSubPlayerSettings.cpp  OptionsSubPlayerSettings.h  OptionsSubVideo.cpp  OptionsSubVoice.cpp  achievementsdialog.cpp  achievementsdialog.h  vcontrolslistpanel.cpp
inputsystem/: inputsystem.cmake  inputsystem.cpp  inputsystem.h  key_translation.cpp
launcher/: launcher.cmake  launcher.cpp
launcher/android/: crashhandler_stub.cpp
launcher_main/: launcher_main.cmake  main.cpp
materialsystem/: cmaterial.cpp  cmaterialsystem.cpp  cmatrendercontext.cpp  materialsystem.cmake  shadersystem.cpp
materialsystem/shaderapidx9/: hardwareconfig.cpp  shaderapidx9.cmake  vertexshaderdx8.cpp
materialsystem/shaderapiempty/: shaderapiempty.cmake
materialsystem/shaderlib/: shaderlib.cmake
materialsystem/stdshaders/: game_shader_dx9_tf2classic.cmake  stdshader_dbg.cmake  stdshader_dx9.cmake
mathlib/: mathlib.cmake  mathlib_base.cpp
particles/: particles.cmake
public/: cdll_int.h  eiface.h  inetmsghandler.h  view_shared.h
public/inputsystem/: ButtonCode.h  iinputsystem.h
public/materialsystem/: imaterialsystem.h  imesh.h
public/mathlib/: mathlib.h
public/tier0/: basetypes.h  platform.h  threadtools.h  tslist.h
public/tier1/: convar.h  iconvar.h
public/vgui_controls/: AnimationController.h  ImagePanel.h  Panel.h
scenefilecache/: scenefilecache.cmake
scripts/waifulib/: compiler_optimizations.py  xcompile.py
serverbrowser/: QuickListPanel.cpp  ServerBrowser.cmake  ServerBrowser.cpp
soundemittersystem/: soundemittersystem.cmake
stub_steam/: stub_steam.cmake
studiorender/: r_studiodecal.cpp  studiorender.cmake  studiorender.cpp
tier0/: PMELib.cpp  dbg.cpp  tier0.cmake
tier1/: convar.cpp  strtools.cpp  tier1.cmake
tier2/: tier2.cmake
tier3/: tier3.cmake
togl/: togl.cmake
togles/: togles.cmake
tracker/common/: Socket.cpp
unicode/: unicode.cmake
vguimatsurface/: MatSystemSurface.cpp  vguimatsurface.cmake
video/: video_services.cmake  videoservices.cpp
vphysics/: vphysics.cmake
vpklib/: vpklib.cmake
vstdlib/: vstdlib.cmake
vtf/: vtf.cmake
(+628 files in other folders)
